--- a/ansible-scripts/roles/service/templates/demo.j2
+++ b/ansible-scripts/roles/service/templates/demo.j2
@@ -2,7 +2,7 @@
 Description=service
 
 [Service]
-Environment=JAR={{application_source}}/build/libs/{{jar_name}}
+Environment=JAR={{application_source_new}}/build/libs/{{jar_name}}
 Environment=CONFIG_FILE={{conf_dir}}/application.properties
 Environment="JAVA_OPTS=-XX:+CMSClassUnloadingEnabled -Xmx3g"
 User=demo
